resources/quayio-stage/quay/quay-py3.web-allow-external.networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-py3-allow-external
spec:
  podSelector:
    matchLabels:
      quay-py3-component: app-py3
  ingress:
    - {}
  policyTypes:
    - Ingress
