resources/quayio-stage/quay/quay-recovery.web-allow-external.networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-recovery-external
spec:
  podSelector:
    matchLabels:
      quay-component: app-recovery
  ingress:
    - {}
  policyTypes:
    - Ingress
